# llm-search

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: docker.yml
src/: api.rs  chat.rs  llm.rs  main.rs  module.rs  ollama.rs
